--- a/index.html
+++ b/index.html
@@ -7,8 +7,44 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet" type="text/css">
-        
-        <link href="" rel="stylesheet" type="text/css">
-
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+        <!-- font-family: 'Source Sans Pro', sans-serif;
+            font-family: 'Roboto', sans-serif; -->
+        <link href="css/header.css" rel="stylesheet" type="text/css">
+        <link href="css/home.css" rel="stylesheet" type="text/css">
 
     </head>
+
+    <body>
+    <main>
+
+        <header class="header">
+            <img src="images/logo.png" class="header__logo" alt="logo">
+            <nav class="header-nav">
+                <ul class="header-nav__list">
+                    <li class="header-nav__item"><a href="#home" class="header-nav__item-link">
+                        Home</a></li>
+                    <li class="header-nav__item"><a href="#services" class="header-nav__item-link">
+                        Services</a></li>
+                    <li class="header-nav__item"><a href="#works" class="header-nav__item-link">
+                        Works</a></li>
+                    <li class="header-nav__item"><a href="#contact" class="header-nav__item-link">
+                        Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="home" id="home">
+            <h1 class="home__title">Helping business and companies innovate and transform</h1>
+            <p class="home__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam temporibus aut quam dolor cumque. Magnam consequatur impedit blanditiis vero. Est odit doloremque doloribus veritatis adipisci, blanditiis mollitia provident dignissimos enim.
+            </p>
+            <div class="home__buttons">
+                <button class="home__buttons-item">Start now</button>
+                <button class="home__buttons-item">Our services</button>
+            </div>
+        </section>
+        
+    </main>   
+    </body>
+
+</html>
