--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="header-nav__item"><a href="#contact" class="header-nav__item-link">
                         Contact</a></li>
                 </ul>
+                <img src="images/hamburger.svg" class="header__mobile-menu">
             </nav>
         </header>
 
