--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             font-family: 'Roboto', sans-serif; -->
         <link href="css/header.css" rel="stylesheet" type="text/css">
         <link href="css/home.css" rel="stylesheet" type="text/css">
+        <link href="css/tiles.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -43,6 +44,31 @@
                 <button class="home__buttons-item">Start now</button>
                 <button class="home__buttons-item">Our services</button>
             </div>
+        </section>
+
+        <section class="tiles">
+
+            <div class="tiles__item">
+                <img src="images/tiles/content-concept-strategy.svg" class="tiles__item-image" alt="tools">
+                <h3 class="tiles__item-title">Content concept & strategy</h3>
+                <hr>
+                <p class="tiles__item-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic dignissimos accusamus expedita sunt veniam, corporis asperiores quod voluptatum.</p>
+            </div>
+
+            <div class="tiles__item">
+                <img src="images/tiles/design-conscepts.svg" class="tiles__item-image" alt="tools">
+                <h3 class="tiles__item-title">Design concepts</h3>
+                <hr>
+                <p class="tiles__item-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic dignissimos accusamus expedita sunt veniam, corporis asperiores quod voluptatum.</p>
+            </div>
+
+            <div class="tiles__item">
+                <img src="images/tiles/seo-marketing.svg" class="tiles__item-image" alt="tools">
+                <h3 class="tiles__item-title">SEO & Marketing solutions</h3>
+                <hr>
+                <p class="tiles__item-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic dignissimos accusamus expedita sunt veniam, corporis asperiores quod voluptatum.</p>
+            </div>
+
         </section>
         
     </main>   
