--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <img src="images/logo.png" class="header__logo" alt="logo">
             <nav class="header-nav">
                 <ul class="header-nav__list">
+                    <li class="header-nav__item-mobile">
+                        <img src="images/mobile-menu-back.png" alt="back">
+                        <a href="" class="header-nav__item-link">Back</a>
+                    </li>
                     <li class="header-nav__item"><a href="#home" class="header-nav__item-link">
                         Home</a></li>
                     <li class="header-nav__item"><a href="#services" class="header-nav__item-link">
@@ -72,6 +76,9 @@
         </section>
         
     </main>   
+
+        <script src="main-navigation.js"></script>
+
     </body>
 
 </html>
