navigation-mobile almost done

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <nav class="header-nav">
                 <ul class="header-nav__list">
                     <li class="header-nav__item-mobile">
-                        <img src="images/mobile-menu-back.png" alt="back">
-                        <a href="" class="header-nav__item-link">Back</a>
+                        <img src="images/mobile-menu-back.png" alt="back" class="header-nav__item-mobile-back">
+                        <a href="#home" class="header-nav__item-link">Back</a>
                     </li>
                     <li class="header-nav__item"><a href="#home" class="header-nav__item-link">
                         Home</a></li>
