--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="css/header.css" rel="stylesheet" type="text/css">
         <link href="css/home.css" rel="stylesheet" type="text/css">
         <link href="css/tiles.css" rel="stylesheet" type="text/css">
+        <link href="css/services.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -68,11 +69,51 @@
 
             <div class="tiles__item">
                 <img src="images/tiles/seo-marketing.svg" class="tiles__item-image" alt="tools">
-                <h3 class="tiles__item-title">SEO & Marketing solutions</h3>
+                <h3 class="tiles__item-title">SEO & Marketing solutions</h5>
                 <hr>
                 <p class="tiles__item-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic dignissimos accusamus expedita sunt veniam, corporis asperiores quod voluptatum.</p>
             </div>
 
+        </section>
+
+        <section class="services" id="services">
+            <div class="services__top">
+                <h6>Services</h6>
+                <h3>Best services for visual perfection</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus itaque esse voluptates voluptas maxime voluptatum consectetur qui molestias aspernatur dolores neque nulla tempora et maiores, nostrum illo ut ad. Vitae?</p>
+            </div>
+            <div class="services__main">
+                <div class="services__main-item">
+                    <img src="images/icons/strategy.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">Strategy</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>  
+                <div class="services__main-item">
+                    <img src="images/icons/marketing.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">Marketing</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>
+                <div class="services__main-item">
+                    <img src="images/icons/technology.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">Technology</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>
+                <div class="services__main-item">
+                    <img src="images/icons/ecommerce.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">eCommerce</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>  
+                <div class="services__main-item">
+                    <img src="images/icons/branding.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">Branding</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>
+                <div class="services__main-item">
+                    <img src="images/icons/seo.png" class="services__main-image" alt="icon">
+                    <h5 class="services__main-title">SEO Identity</h5>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                </div>
+            </div>
         </section>
         
     </main>   
