services & works finished

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="css/home.css" rel="stylesheet" type="text/css">
         <link href="css/tiles.css" rel="stylesheet" type="text/css">
         <link href="css/services.css" rel="stylesheet" type="text/css">
+        <link href="css/works.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -79,41 +80,54 @@
         <section class="services" id="services">
             <div class="services__top">
                 <h6>Services</h6>
-                <h3>Best services for visual perfection</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus itaque esse voluptates voluptas maxime voluptatum consectetur qui molestias aspernatur dolores neque nulla tempora et maiores, nostrum illo ut ad. Vitae?</p>
+                <h3>Best services for <span class="services__top-span">visual perfection</span></h3>
+                <p>Repellendus itaque esse voluptates voluptas maxime voluptatum consectetur qui molestias aspernatur dolores neque nulla tempora et maiores, nostrum illo ut ad. Vitae?</p>
             </div>
             <div class="services__main">
                 <div class="services__main-item">
                     <img src="images/icons/strategy.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">Strategy</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex?</p>
                 </div>  
                 <div class="services__main-item">
                     <img src="images/icons/marketing.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">Marketing</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex?</p>
                 </div>
                 <div class="services__main-item">
                     <img src="images/icons/technology.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">Technology</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? </p>
                 </div>
                 <div class="services__main-item">
                     <img src="images/icons/ecommerce.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">eCommerce</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex?</p>
                 </div>  
                 <div class="services__main-item">
                     <img src="images/icons/branding.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">Branding</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex?</p>
                 </div>
                 <div class="services__main-item">
                     <img src="images/icons/seo.png" class="services__main-image" alt="icon">
                     <h5 class="services__main-title">SEO Identity</h5>
-                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Molestias excepturi veniam distinctio odio dolor quos?</p>
+                    <p class="services__main-text">Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex?</p>
                 </div>
             </div>
+        </section>
+
+        <section class="works" id="works">
+
+            <img src="images/gallery/1.jpg" class="works__item" alt="work">
+            <img src="images/gallery/2.jpg" class="works__item" alt="work">
+            <img src="images/gallery/3.jpg" class="works__item" alt="work">
+            <img src="images/gallery/4.jpg" class="works__item" alt="work">
+            <img src="images/gallery/5.jpg" class="works__item" alt="work">
+            <img src="images/gallery/6.jpg" class="works__item" alt="work">
+            <img src="images/gallery/7.jpg" class="works__item" alt="work">
+            <img src="images/gallery/8.jpg" class="works__item" alt="work">
+
         </section>
         
     </main>   
