--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="css/tiles.css" rel="stylesheet" type="text/css">
         <link href="css/services.css" rel="stylesheet" type="text/css">
         <link href="css/works.css" rel="stylesheet" type="text/css">
+        <link href="css/contact.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -127,6 +128,36 @@
             <img src="images/gallery/6.jpg" class="works__item" alt="work">
             <img src="images/gallery/7.jpg" class="works__item" alt="work">
             <img src="images/gallery/8.jpg" class="works__item" alt="work">
+
+        </section>
+
+        <section class="contact" id="contact">
+
+            <div class="contact__description">
+                <h2 class="contact__description-title">
+                    Want to have a professional project? Let's talk about it.
+                </h2>
+                <p class="contact__description-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos labore sapiente aperiam? Dignissimos architecto, soluta cumque delectus ut aut culpa sunt dicta eligendi quam nobis! Unde nesciunt esse mollitia similique.
+                    <br>
+                    Aliquid deleniti, nemo quia beatae dignissimos ea! Enim autem eaque, rem sunt velit aspernatur ex? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos labore sapiente aperiam?
+                </p>
+            </div>
+
+            <form class="contact__form">
+
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="text" name="company-name" placeholder="Company Name Name" required>
+                <input type="email" name="email" placeholder="Email address" required>
+
+                <select placeholder="Select service" required>
+                    <option selected>Web Design</option>
+                    <option>Advice</option>
+                    <option>Other</option>
+                </select>
+                
+                <textarea placeholder="Describe your project" rows="10" cols="65"></textarea>
+            </form>
 
         </section>
         
